--- a/public/app/transaction.component.html
+++ b/public/app/transaction.component.html
@@ -1,16 +1,17 @@
 <div>
     <div *ngIf="!editing">
         <button (click)="startEdit()">Edit</button>
+        <button (click)="delete(tnx)">Delete</button>
         <span>{{tnx.accountId}}</span><span>&nbsp;</span>
         <span>{{tnx.description}}</span><span>&nbsp;</span>
         <span>{{tnx.amount}}</span>
     </div>
     <div *ngIf="editing">
         <button (click)="stopEdit()">Cancel</button>
+        <button (click)="delete(newTnx)">Delete</button>
         <input [(ngModel)]="newTnx.accountId" placeholder="accountId"/>
         <input [(ngModel)]="newTnx.description" placeholder="description"/>
         <input [(ngModel)]="newTnx.amount" placeholder="amount"/>
         <button (click)="update(newTnx)">Save</button>
-        <button (click)="delete(newTnx)">Delete</button>
     </div>
 </div>
