basic crud for account is working

--- a/public/app/app.component.html
+++ b/public/app/app.component.html
@@ -1,11 +1,8 @@
-<h1>My First Angular 2 App</h1>
-<!--<debug></debug>-->
+<h1>My First Angular 2 App2</h1>
+
+<new-account></new-account>
+<account-list></account-list>
+
 <new-transaction></new-transaction>
 <transaction-list></transaction-list>
 
-<!--<ul>-->
-<!--<hero-edit [hero]="newHero"></hero-edit>-->
-<!--<li *ngFor="#hero of heroes | async">-->
-<!--<hero-edit [hero]="hero"></hero-edit>-->
-<!--</li>-->
-<!--</ul>-->
