--- a/public/app/account-list.component.html
+++ b/public/app/account-list.component.html
@@ -1,4 +1,5 @@
 <h2>List of accounts</h2>
+<button (click)="refresh()">Refresh</button>
 <ul>
     <li *ngFor="#acc of accounts | async">
         <span>{{acc.name}}</span>
