--- a/public/app/transaction-list.component.html
+++ b/public/app/transaction-list.component.html
@@ -1,6 +1,15 @@
 <h2>List of transactions</h2>
+<button (click)="debug()">Filter</button>
+<button (click)="refresh()">Refresh</button>
 <ul>
     <li *ngFor="#tnx of transactions | async">
+        <span>{{tnx.description}}</span>
+        <transaction [tnx]="tnx"></transaction>
+    </li>
+</ul>
+<hr>
+<ul>
+    <li *ngFor="#tnx of transactions2 | async">
         <span>{{tnx.description}}</span>
         <transaction [tnx]="tnx"></transaction>
     </li>
