--- a/public/app/transaction.component.html
+++ b/public/app/transaction.component.html
@@ -3,6 +3,7 @@
         <button (click)="startEdit()">Edit</button>
         <button (click)="delete(tnx)">Delete</button>
         <span>{{tnx.accountId}}</span><span>&nbsp;</span>
+        <span>{{accountName | async}}</span><span>&nbsp;</span>
         <span>{{tnx.description}}</span><span>&nbsp;</span>
         <span>{{tnx.amount}}</span>
     </div>
@@ -10,6 +11,9 @@
         <button (click)="stopEdit()">Cancel</button>
         <button (click)="delete(newTnx)">Delete</button>
         <input [(ngModel)]="newTnx.accountId" placeholder="accountId"/>
+        <select [(ngModel)]="newTnx.accountId">
+            <option *ngFor="#a of (accounts | async)" [value]="a._id">{{a.name}}</option>
+        </select>
         <input [(ngModel)]="newTnx.description" placeholder="description"/>
         <input [(ngModel)]="newTnx.amount" placeholder="amount"/>
         <button (click)="update(newTnx)">Save</button>
