added dropdownlist of accounts to new transaction input

--- a/public/app/new-transaction.component.html
+++ b/public/app/new-transaction.component.html
@@ -1,6 +1,9 @@
 <h2>Enter new transaction</h2>
 <div>
-    <input [(ngModel)]="tnx.accountId" placeholder="accountId"/>
+    <span>{{tnx.accountId}}</span><span>&nbsp;</span>
+    <select [(ngModel)]="tnx.accountId">
+        <option *ngFor="#a of (accounts | async)" [value]="a._id">{{a.name}}</option>
+    </select>
     <input [(ngModel)]="tnx.description" placeholder="description"/>
     <input [(ngModel)]="tnx.amount" placeholder="amount"/>
     <button (click)="save()">Save</button>
