--- a/public/app/transaction-list.component.html
+++ b/public/app/transaction-list.component.html
@@ -1,14 +1,13 @@
 <h2>List of transactions</h2>
 <button (click)="refresh()">Refresh</button>
+<span *ngFor="#p of pages | async">
+    <span *ngIf="p==(page |async)">{{p}}</span>
+    <span *ngIf="p!=(page |async)">
+     <button (click)="setPage(p)">{{p}}</button>
+    </span>
+</span>
 <ul>
     <li *ngFor="#tnx of transactions | async">
-        <span>{{tnx.description}}</span>
-        <transaction [tnx]="tnx"></transaction>
-    </li>
-</ul>
-<hr>
-<ul>
-    <li *ngFor="#tnx of transactions2 | async">
         <span>{{tnx.description}}</span>
         <transaction [tnx]="tnx"></transaction>
     </li>
