--- a/public/app/app.component.html
+++ b/public/app/app.component.html
@@ -13,9 +13,15 @@
         <button (click)="logout()">logout</button>
     </div>
 
+    <h3>Category</h3>
+    <new-category></new-category>
+    <category-list></category-list>
+
+    <h3>Account</h3>
     <new-account></new-account>
     <account-list></account-list>
 
+    <h3>Transaction</h3>
     <new-transaction></new-transaction>
     <transaction-list></transaction-list>
 </div>
