implemented Category hierarchy

--- a/public/app/new-category.component.html
+++ b/public/app/new-category.component.html
@@ -1,5 +1,6 @@
 <div>
     <input [(ngModel)]="cat.shortName" placeholder="name"/>
+    <input [(ngModel)]="cat.parentId" placeholder="parentId"/>
     <button (click)="save()">Save</button>
     <button (click)="reset()">Reset</button>
 </div>
