--- a/public/app/category.component.html
+++ b/public/app/category.component.html
@@ -3,15 +3,16 @@
         <button (click)="startEdit()">Edit</button>
         <button (click)="delete(cat)">Delete</button>
         <span>{{cat._id}}</span><span>&nbsp;</span>
-        <span>{{cat.shortName}}</span><span>&nbsp;</span>
-        <span>parent:{{cat.parentId}}</span><span>&nbsp;</span>
-        <span>children:{{cat.childrenIds}}</span>
+        <span>{{cat.name}}</span><span>&nbsp;</span>
+        <span>children: </span>
+        <span *ngFor="#c of cat.children">{{c.shortName}}</span>
     </div>
     <div *ngIf="editing">
         <button (click)="stopEdit()">Cancel</button>
         <button (click)="delete(newCat)">Delete</button>
         <span>{{cat._id}}</span><span>&nbsp;</span>
         <input [(ngModel)]="newCat.shortName" placeholder="name"/>
+        <input [(ngModel)]="newCat.parentId" placeholder="parentId"/>
         <button (click)="update(newCat)">Save</button>
     </div>
 </div>
