migrated to newest angular, and added routing

--- a/public/app/category-list.component.html
+++ b/public/app/category-list.component.html
@@ -1,3 +1,5 @@
+<h3>Category</h3>
+<new-category></new-category>
 <button (click)="refresh()">Refresh</button>
 <ul>
     <li *ngFor="#cat of categories | async">
