--- a/public/app/account-list.component.html
+++ b/public/app/account-list.component.html
@@ -1,3 +1,5 @@
+<h3>Account</h3>
+<new-account></new-account>
 <button (click)="refresh()">Refresh</button>
 <ul>
     <li *ngFor="#acc of accounts | async">
