--- a/public/app/app.component.html
+++ b/public/app/app.component.html
@@ -1,28 +1,5 @@
 <h1>My First Angular 2 App2</h1>
 
-<div *ngIf="!user">
-    <form>
-        <input type="text" [(ngModel)]="loginData.username" placeholder="username"/>
-        <input type="password" [(ngModel)]="loginData.password" placeholder="password"/>
-        <button type="submit" (click)="login()">Login</button>
-    </form>
-</div>
-
-<div *ngIf="user">
-    <div>Logged in as: {{user.username}}
-        <button (click)="logout()">logout</button>
-    </div>
-
-    <h3>Category</h3>
-    <new-category></new-category>
-    <category-list></category-list>
-
-    <h3>Account</h3>
-    <new-account></new-account>
-    <account-list></account-list>
-
-    <h3>Transaction</h3>
-    <new-transaction></new-transaction>
-    <transaction-list></transaction-list>
-</div>
+<user-info></user-info>
+<router-outlet></router-outlet>
 
