--- a/public/app/transaction.component.html
+++ b/public/app/transaction.component.html
@@ -1,23 +1,27 @@
-<div>
-    <div *ngIf="!editing">
+<template [ngIf]="!editing">
+    <td>{{tnx.date}}</td>
+    <td>{{tnx.description}}</td>
+    <td>{{accountName | async}}</td>
+    <td>{{tnx.accountId}}</td>
+    <td>{{tnx.amount}}</td>
+    <td>
         <button (click)="startEdit()">Edit</button>
         <button (click)="delete(tnx)">Delete</button>
-        <span>{{tnx.date}}</span><span>&nbsp;</span>
-        <span>{{tnx.accountId}}</span><span>&nbsp;</span>
-        <span>{{accountName | async}}</span><span>&nbsp;</span>
-        <span>{{tnx.description}}</span><span>&nbsp;</span>
-        <span>{{tnx.amount}}</span>
-    </div>
-    <div *ngIf="editing">
-        <button (click)="stopEdit()">Cancel</button>
-        <button (click)="delete(newTnx)">Delete</button>
-        <input [(ngModel)]="newTnx.date" placeholder="date"/>
-        <span>{{newTnx.accountId}}</span><span>&nbsp;</span>
+    </td>
+</template>
+<template [ngIf]="editing">
+    <td><input [(ngModel)]="newTnx.date" placeholder="date"/></td>
+    <td><input [(ngModel)]="newTnx.description" placeholder="description"/></td>
+    <td>
         <select [(ngModel)]="newTnx.accountId">
             <option *ngFor="#a of (accounts | async)" [value]="a._id">{{a.name}}</option>
         </select>
-        <input [(ngModel)]="newTnx.description" placeholder="description"/>
-        <input [(ngModel)]="newTnx.amount" placeholder="amount"/>
+    </td>
+    <td>{{newTnx.accountId}}</td>
+    <td><input [(ngModel)]="newTnx.amount" placeholder="amount"/></td>
+    <td>
+        <button (click)="stopEdit()">Cancel</button>
+        <button (click)="delete(newTnx)">Delete</button>
         <button (click)="update(newTnx)">Save</button>
-    </div>
-</div>
+    </td>
+</template>
