--- a/public/app/new-transaction.component.html
+++ b/public/app/new-transaction.component.html
@@ -1,11 +1,12 @@
-<div>
-    <input [(ngModel)]="tnx.date" placeholder="date"/>
-    <span>{{tnx.accountId}}</span><span>&nbsp;</span>
-    <select [(ngModel)]="tnx.accountId">
-        <option *ngFor="#a of (accounts | async)" [value]="a._id">{{a.name}}</option>
-    </select>
-    <input [(ngModel)]="tnx.description" placeholder="description"/>
-    <input [(ngModel)]="tnx.amount" placeholder="amount"/>
-    <button (click)="save()">Save</button>
-    <button (click)="reset()">Reset</button>
-</div>
+<form class="form-inline">
+    <input class="form-control" [(ngModel)]="tnx.date" placeholder="date"/>
+    <div class="form-group">
+        <select class="form-control" [(ngModel)]="tnx.accountId">
+            <option *ngFor="#a of (accounts | async)" [value]="a._id">{{a.name}}</option>
+        </select>
+    </div>
+    <input class="form-control" [(ngModel)]="tnx.description" placeholder="description"/>
+    <input class="form-control" [(ngModel)]="tnx.amount" placeholder="amount"/>
+    <button class="form-control btn-primary" (click)="save()" type="submit">Save</button>
+    <button class="form-control btn-danger" (click)="reset()" type="reset">Reset</button>
+</form>
