--- a/public/app/transaction.component.html
+++ b/public/app/transaction.component.html
@@ -1,27 +1,24 @@
 <template [ngIf]="!editing">
-    <td>{{tnx.date}}</td>
+    <td class="text-nowrap">{{tnx.date}}</td>
     <td>{{tnx.description}}</td>
     <td>{{accountName | async}}</td>
-    <td>{{tnx.accountId}}</td>
     <td>{{tnx.amount}}</td>
-    <td>
-        <button (click)="startEdit()">Edit</button>
-        <button (click)="delete(tnx)">Delete</button>
+    <td class="text-nowrap">
+        <button class="btn btn-xs btn-default" (click)="startEdit()">Edit</button>
     </td>
 </template>
 <template [ngIf]="editing">
-    <td><input [(ngModel)]="newTnx.date" placeholder="date"/></td>
-    <td><input [(ngModel)]="newTnx.description" placeholder="description"/></td>
-    <td>
-        <select [(ngModel)]="newTnx.accountId">
+    <td><input class="form-control" [(ngModel)]="newTnx.date" placeholder="date"/></td>
+    <td><input class="form-control" [(ngModel)]="newTnx.description" placeholder="description"/></td>
+    <td class="col-sm-2">
+        <select class="form-control" [(ngModel)]="newTnx.accountId">
             <option *ngFor="#a of (accounts | async)" [value]="a._id">{{a.name}}</option>
         </select>
     </td>
-    <td>{{newTnx.accountId}}</td>
-    <td><input [(ngModel)]="newTnx.amount" placeholder="amount"/></td>
-    <td>
-        <button (click)="stopEdit()">Cancel</button>
-        <button (click)="delete(newTnx)">Delete</button>
-        <button (click)="update(newTnx)">Save</button>
+    <td><input class="form-control" [(ngModel)]="newTnx.amount" placeholder="amount"/></td>
+    <td class="text-nowrap">
+        <button class="btn btn-danger" (click)="delete(newTnx)">Delete</button>
+        <button class="btn btn-primary" (click)="update(newTnx)">Save</button>
+        <button class="btn btn-default" (click)="stopEdit()">Cancel</button>
     </td>
 </template>
