--- a/public/app/login.component.html
+++ b/public/app/login.component.html
@@ -1,12 +1,20 @@
 <div *ngIf="!(user|async)">
-    <form>
-        <input type="text" [(ngModel)]="loginData.username" placeholder="username"/>
-        <input type="password" [(ngModel)]="loginData.password" placeholder="password"/>
-        <button type="submit" (click)="login()">Login</button>
-    </form>
+    <h3>Login</h3>
+    <div class="panel panel-default" *ngIf="!(user | async)">
+        <div class="panel-body">
+            <form class="form-inline">
+                <input class="form-control" type="text" [(ngModel)]="loginData.username" placeholder="username"/>
+                <input class="form-control" type="password" [(ngModel)]="loginData.password" placeholder="password"/>
+                <button class="form-control btn-primary" type="submit" (click)="login()">Login</button>
+            </form>
+        </div>
+    </div>
 </div>
 <div *ngIf="user|async">
-    <div>Logged in as: {{(user | async).username}}
-        <button (click)="logout()">logout</button>
+    <div class="input-group">
+        <label class="form-control">{{(user | async).username}}</label>
+        <div class="input-group-btn">
+            <button class="btn btn-primary" (click)="logout()">logout</button>
+        </div>
     </div>
 </div>
