--- a/public/app/transaction-list.component.html
+++ b/public/app/transaction-list.component.html
@@ -1,23 +1,46 @@
-<h3>Transaction</h3>
-<new-transaction></new-transaction>
-<button (click)="refresh()">Refresh</button>
-<pagination
-        [maxSize]="5"
-        [itemsPerPage]="limit"
-        [totalItems]="500"
-        [boundaryLinks]="true"
-        [(ngModel)]="page"
-        (pageChanged)="setPage($event)"></pagination>
-<table class="table">
-    <thead>
-    <tr>
-        <th>Date</th>
-        <th>Description</th>
-        <th>Account</th>
-        <th>AccountId</th>
-        <th>Amount</th>
-        <th>Actions</th>
-    </tr>
-    </thead>
-    <tr transaction *ngFor="#tnx of transactions | async" [tnx]="tnx"></tr>
-</table>
+<div class="content">
+    <div class="row">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Transactions
+            </div>
+            <div class="panel-body">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <new-transaction></new-transaction>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <pagination class="pagination-sm"
+                                [maxSize]="10"
+                                [itemsPerPage]="limit"
+                                [totalItems]="500"
+                                [boundaryLinks]="true"
+                                [(ngModel)]="page"
+                                (pageChanged)="setPage($event)"></pagination>
+                </div>
+                <table class="table table-condensed table-hover">
+                    <thead>
+                    <tr>
+                        <th class="text-nowrap col-sm-2">Date</th>
+                        <th class="text-nowrap col-sm-6">Description</th>
+                        <th class="text-nowrap col-sm-2">Account</th>
+                        <th class="text-nowrap col-sm-2">Amount</th>
+                        <th class="text-nowrap"></th>
+                    </tr>
+                    </thead>
+                    <tr transaction *ngFor="#tnx of transactions | async" [tnx]="tnx"></tr>
+                </table>
+                <div class="text-center">
+                    <pagination class="pagination-lg"
+                                [maxSize]="10"
+                                [itemsPerPage]="limit"
+                                [totalItems]="500"
+                                [boundaryLinks]="true"
+                                [(ngModel)]="page"
+                                (pageChanged)="setPage($event)"></pagination>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
