well played "type"-script, well played

--- a/public/app/new-transaction.component.html
+++ b/public/app/new-transaction.component.html
@@ -9,4 +9,5 @@
     <input class="form-control" [(ngModel)]="tnx.amount" placeholder="amount"/>
     <button class="form-control btn-primary" (click)="save()" type="submit">Save</button>
     <button class="form-control btn-danger" (click)="reset()" type="reset">Reset</button>
+    <button class="form-control btn-danger" (click)="debug()" type="reset">Debug</button>
 </form>
