--- a/public/app/app.component.html
+++ b/public/app/app.component.html
@@ -11,6 +11,7 @@
                 <li><a [routerLink]="['Accounts']">Accounts</a></li>
                 <li><a [routerLink]="['Categories']">Categories</a></li>
                 <li><a [routerLink]="['Transactions']">Transactions</a></li>
+                <li><a [routerLink]="['Reports']">Reports</a></li>
             </ul>
         </div>
         <div class="col-sm-8">
