--- a/public/app/reports.component.html
+++ b/public/app/reports.component.html
@@ -6,7 +6,8 @@
                 <div class="badge">{{numOfTnxs|async}}</div>
             </div>
             <div class="panel-body">
-                <chart [options]="options"></chart>
+                <chart class="col-sm-12" [options]="options"></chart>
+                <chart class="col-sm-12" [options]="options2"></chart>
             </div>
         </div>
     </div>
