implemented account filtering fixed some refresh issues and field reset issues fixed category parse bug defaulted new transaction account

--- a/public/app/app.component.html
+++ b/public/app/app.component.html
@@ -12,6 +12,7 @@
                 <li><a [routerLink]="['Categories']">Categories</a></li>
                 <li><a [routerLink]="['Transactions']">Transactions</a></li>
                 <li><a [routerLink]="['Reports']">Reports</a></li>
+                <li><a [routerLink]="['Debug']">Debug</a></li>
             </ul>
         </div>
         <div class="col-sm-8">
