--- a/public/app/debug2.component.html
+++ b/public/app/debug2.component.html
@@ -1,7 +1,7 @@
 <div class="form-inline">
     <div class="form-group">
         <select class="form-control" [ngModel]="accountId | async" (ngModelChange)="onChange($event)">
-            <option *ngFor="#acc of (accounts | async)" [value]="acc._id">{{acc.name}}</option>
+            <option *ngFor="let acc of (accounts | async)" [value]="acc._id">{{acc.name}}</option>
             <!--<option value="foobar" [attr.selected]="selected()">foobar</option>-->
         </select>
         <div>{{accountId | async}}</div>
