--- a/public/app/transactions/new-transaction.component.html
+++ b/public/app/transactions/new-transaction.component.html
@@ -1,7 +1,7 @@
 <form class="form-inline">
     <div class="form-group">
         <select class="form-control" [(ngModel)]="tnx.accountId">
-            <option *ngFor="#a of (accounts | async)" [value]="a._id">{{a.name}}</option>
+            <option *ngFor="let a of (accounts | async)" [value]="a._id">{{a.name}}</option>
         </select>
     </div>
     <input class="form-control" [(ngModel)]="tnx.date" placeholder="date"/>
