--- a/public/app/transactions/transaction-filter.component.html
+++ b/public/app/transactions/transaction-filter.component.html
@@ -1,7 +1,7 @@
 <div class="form-inline">
     <div class="form-group">
         <select class="form-control" [ngModel]="account" (ngModelChange)="onChange($event)">
-            <option *ngFor="#a of (accounts | async)" [value]="a._id">{{a.name}}</option>
+            <option *ngFor="let a of (accounts | async)" [value]="a._id">{{a.name}}</option>
         </select>
     </div>
 </div>
