--- a/public/app/banklink/banklink.component.html
+++ b/public/app/banklink/banklink.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="panel panel-default">
             <div class="panel-heading">
-                Citibank loader
+                BankLink
             </div>
             <div class="panel-body">
                 <form class="form-inline">
