fixed bug in saveMany implemented search by description o the ui made search case insensitive

--- a/public/app/transactions/transaction-list.component.html
+++ b/public/app/transactions/transaction-list.component.html
@@ -15,7 +15,8 @@
                     <div class="panel-body">
                         <transaction-filter
                                 [account]="defaultAccount"
-                                (accountChange)="onAccountChanged($event)">
+                                [description]="descriptionRegex"
+                                (filterChange)="onFilterChanged($event)">
                         </transaction-filter>
                     </div>
                 </div>
