--- a/public/app/transactions/transaction-filter.component.html
+++ b/public/app/transactions/transaction-filter.component.html
@@ -1,7 +1,10 @@
 <div class="form-inline">
     <div class="form-group">
-        <select class="form-control" [ngModel]="account" (ngModelChange)="onChange($event)">
+        <select class="form-control" [ngModel]="account" (ngModelChange)="onAccountChange($event)">
+            <option value="">--All--</option>
             <option *ngFor="let a of (accounts | async)" [value]="a._id">{{a.name}}</option>
         </select>
+        <input class="form-control" [ngModel]="description" (ngModelChange)="onDesriptionChange($event)"
+               placeholder="description"/>
     </div>
 </div>
