--- a/public/app/transactions/transaction-list.component.html
+++ b/public/app/transactions/transaction-list.component.html
@@ -20,6 +20,30 @@
                         </transaction-filter>
                     </div>
                 </div>
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <div class="form-inline">
+                            <div class="form-group">
+                                <transaction-control #tnxCtrl></transaction-control>
+                                <div class="form-inline">
+                                    <div class="form-group">
+                                        <select class="form-control" [(ngModel)]="category">
+                                            <option *ngFor="let c of (categories | async)" [value]="c._id">{{c.name}}
+                                            </option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <input class="form-control" [(ngModel)]="category" placeholder="categories"/>
+                                <button class="form-control btn-primary" (click)="tnxCtrl.sendAddCategory(category)"
+                                        type="submit">Add
+                                </button>
+                                <button class="form-control btn-primary" (click)="tnxCtrl.sendRemCategory(category)"
+                                        type="submit">Remove
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="text-center">
                     <pagination class="pagination-sm"
                                 [maxSize]="10"
@@ -35,14 +59,17 @@
                 <table class="table table-condensed table-hover">
                     <thead>
                     <tr>
+                        <th class="text-nowrap col-sm-1">-</th>
                         <th class="text-nowrap col-sm-1">Date</th>
-                        <th class="text-nowrap col-sm-7">Description</th>
-                        <th class="text-nowrap col-sm-2">Account</th>
-                        <th class="text-nowrap col-sm-2">Amount</th>
+                        <th class="text-nowrap col-sm-4">Description</th>
+                        <th class="text-nowrap col-sm-2">Categories</th>
+                        <th class="text-nowrap col-sm-1">Account</th>
+                        <th class="text-nowrap col-sm-1">Amount</th>
                         <th class="text-nowrap"></th>
                     </tr>
                     </thead>
-                    <tr transaction *ngFor="let tnx of transactions | async" [tnx]="tnx"></tr>
+                    <tr transaction #tnxcmp *ngFor="let tnx of transactions | async" [tnx]="tnx"
+                        (click)="tnxcmp.clicked()"></tr>
                 </table>
                 <div class="text-center">
                     <pagination class="pagination-lg"
